--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "connected-react-router": "^5.0.1",
+    "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "history": "^4.7.2",
     "node-sass": "^4.10.0",
