--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apollo-boost": "^0.1.22",
     "bootstrap": "^4.1.3",
     "connected-react-router": "^5.0.1",
-    "dotenv": "^6.2.0",
-    "express": "^4.16.4",
+    "graphql": "^14.0.2",
     "history": "^4.7.2",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-apollo": "^2.3.2",
     "react-dom": "^16.6.3",
     "react-redux": "^6.0.0",
     "react-router": "^4.3.1",
