--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.1.3",
     "connected-react-router": "^5.0.1",
     "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "history": "^4.7.2",
     "node-sass": "^4.10.0",
     "prop-types": "^15.6.2",
