--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "2.1.1",
+    "react-youtube": "^7.8.0",
     "reactstrap": "^6.5.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
