--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@andyet/simplewebrtc": "^1.0.2",
     "apollo-boost": "^0.1.22",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
@@ -27,7 +28,8 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.2.0"
+    "socket.io-client": "^2.2.0",
+    "react-contenteditable": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
